--- a/app/views/places/_form.html.erb
+++ b/app/views/places/_form.html.erb
@@ -1,6 +1,6 @@
 
 <div class="row">
-  <div class="large-12 columns">
+  <div class="large-8 columns">
 <%= form_for(@place) do |f| %>
   <% if @place.errors.any? %>
     <div id="error_explanation">
@@ -54,7 +54,11 @@
 
 </div>
 
-
+<div class="large-4 columns">
+   <div ng-controller = "PlaceEditCtrl">
+  <button ng-click = "deleteAllPhotos( <%=@place.id %>)"> Delete Photos</button>
+   </div>
+</div>
 
 <%= javascript_include_tag "tinymce-jquery" %>
 
