--- a/app/views/users_signed/_signed.html.erb
+++ b/app/views/users_signed/_signed.html.erb
@@ -446,11 +446,11 @@
 
 
 
-  <div class="feedback fixed text-right">
+  <span class="feedback fixed text-right">
 
     <%#=image_tag("feed_back.png") %>
-    <%=link_to image_tag("feed_back.png",height:"70px",width:"70px"),new_feed_back_path %>
-  </div>
+    <%=link_to "sdfds",new_feed_back_path %>
+  </span>
 
 
 </div>
