--- a/app/views/places/_form.html.erb
+++ b/app/views/places/_form.html.erb
@@ -60,9 +60,9 @@
    </div>
 </div>
 
-<%= javascript_include_tag "tinymce-jquery" %>
+<%#= javascript_include_tag "tinymce-jquery" %>
 
-<script type="text/javascript">
+<!--<script type="text/javascript">
 
 
     tinyMCE.init({
@@ -71,6 +71,6 @@
     });
 
 
-</script>
+</script>-->
 
 
