--- a/app/views/layouts/admin_layout.erb
+++ b/app/views/layouts/admin_layout.erb
@@ -95,6 +95,7 @@
 
 
 <%= javascript_include_tag "admin_application.js" %>
+<%= tinymce_assets %>
 <%= yield :javascript_includes %>
 
 <script type="text/javascript">
