--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -25,7 +25,7 @@ body {
 
 .angular-ratings { overflow: hidden; *zoom: 1; list-style: none; padding: 0; margin: 0; }
 .angular-ratings li { float: left; width: 20px; height: 20px; border: 0px solid silver; margin: 0px; text-indent: -500000em;
-  background: #cccccc url(angular-star.png) no-repeat; background-size: 100%; }
+  background: #cccccc url(/bee-star.png) no-repeat; background-size: 100%; }
 .angular-ratings li.over { border-color: silver; background-color: white; background-position: 0 -20px; cursor: pointer; }
 .angular-ratings li.active { border-color: seagreen; background-color: rgba(63, 167, 54, 0.48); background-position: 0 -20px; }
 
@@ -243,30 +243,102 @@ a:visited {
   margin-bottom: 10px;
 }
 
+.center{
+  position: fixed;
+  top: 50%;
+  right: -2%;
+  width: 7%;
+  height: 0%;
+  text-align:right;
+  z-index:9999;
+  margin-top:-15px;
+}
 
-.feedback {
-
-  margin-top: 25%;
+.center a{
+  transform: rotate(-90deg);
+  -webkit-transform: rotate(-90deg);
+  -moz-transform: rotate(-90deg);
+  -o-transform: rotate(-90deg);
+  filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=3);
+  display: block;
+  background:#5D230B;
+  text-align:center;
+  height: 5%;
+  width: 100%;
+  padding: 20% 5%;
+  color: #fff;
+  font-family: Arial, sans-serif;
+  font-size: 17px;
+  font-weight: bold;
+  text-decoration: none;
+  border-bottom: solid 1px #333; border-left: solid 1px #333; border-right: solid 1px #fff;
 
 }
+
+.center a:hover {
+  background:#CCCCCC;
+}
+
+
+/*.center{
+  position: fixed;
+  top: 50%;
+  right: 0px;
+  width: 100px;
+  height: 0px;
+  text-align:right;
+  z-index:9999;
+  margin-top:-15px;
+}
+
+.center a{
+  transform: rotate(-90deg);
+  -webkit-transform: rotate(-90deg);
+  -moz-transform: rotate(-90deg);
+  -o-transform: rotate(-90deg);
+  filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=3);
+  display: block;
+  background: #06c;
+  text-align:center;
+  height: 15px;
+  width: 165px;
+  padding: 16px 16px;
+  color: #fff;
+  font-family: Arial, sans-serif;
+  font-size: 17px;
+  font-weight: bold;
+  text-decoration: none;
+  border-bottom: solid 1px #333; border-left: solid 1px #333; border-right: solid 1px #fff;
+
+}
+
+.center a:hover {
+  background: #CCC;
+}*/
+
+.center  a:visited {
+  color: white;
+}
+
+
 
 .footer {
   color: white;
 
+}
 
-
-  a:hover {
+ .footer a:hover {
     text-decoration: none;
     background-color: #5D230B;
     color: white;
   }
 
 
-  a:visited {
+ .footer a:visited {
     color: white;
   }
 
-}
+
 
 
 
