--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,7 +33,7 @@
  <!--<link rel="stylesheet" href="//releases.flowplayer.org/5.4.3/skin/minimalist.css">-->
     <!-- 3. flowplayer -->
 
-
+    <%= favicon_link_tag "/favi.png" %>
 
 
     <!--<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8/jquery.min.js"></script>-->
@@ -54,7 +54,7 @@
 
       <%= yield %>
 
-  </div>
+       </div>
 
 
   <!--<script src="/assets/angular.js?body=1"></script>-->
