--- a/app/views/layouts/show_interest_layout.erb
+++ b/app/views/layouts/show_interest_layout.erb
@@ -7,7 +7,7 @@
 <!--[if (gt IE 9)|!(IE)]><!--> <html lang="en"> <!--<![endif]-->
 <head>
   <meta charset="utf-8" />
-
+  <%= favicon_link_tag "/favi.png" %>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <title><%=full_title(yield(:title))    %></title>
