--- a/app/views/static_pages/_unsigned.html.erb
+++ b/app/views/static_pages/_unsigned.html.erb
@@ -237,11 +237,11 @@
 
 </div>-->
 
-<div class="feedback fixed text-right">
 
-    <%#=image_tag("feed_back.png") %>
-    <%#=link_to image_tag("feed_back.png",height:"30px",width:"30px"),new_feed_back_path %>
+<div class="center radius">
+  <%=link_to "FeedBack",new_feed_back_path %>
 </div>
+
 
 
 
