--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -70,6 +70,7 @@
  <%#= javascript_include_tag "minifiedVendor/flowplayer_html5.min"  %>
 
   <%= javascript_include_tag "application" %>
+    <script src="http://code.angularjs.org/1.2.0-rc.3/angular-sanitize.min.js"></script>
 
   <%= yield :javascript_includes %>
 
