--- a/app/views/users_signed/_signed.html.erb
+++ b/app/views/users_signed/_signed.html.erb
@@ -353,8 +353,10 @@
                   <!-- This is for the post posted by admin-->
                   <div ng-show="userDetail.feedModel == 'posts' ">
                     <!--{{userDetail.feed.postImage.url}}-->
+
+
                     <img ng-src="{{userDetail.feed.postImage.url}}" width="300px" height="300px"/><br>
-                    Description::<span class="description" ng-bind="userDetail.feed.description"></span>
+                    Description::<span class="description" ng-bind-html="userDetail.feed.description"></span>
                     <a ng-href="/posts/{{userDetail.feed.id}}" target="_blank">Read More</a>
                     <br>
                     <span class="subheader" ng-bind="userDetail.feed.created_at|date:'h.mm a'">at  </span>
