--- a/app/views/layouts/show_interest_layout.erb
+++ b/app/views/layouts/show_interest_layout.erb
@@ -42,7 +42,7 @@
   <script src="//releases.flowplayer.org/5.4.6/flowplayer.min.js"></script>
 
   <%= javascript_include_tag "application" %>
-
+  <script src="http://code.angularjs.org/1.2.0-rc.3/angular-sanitize.min.js"></script>
   <%= yield :javascript_includes %>
 
 
