--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -29,8 +29,8 @@
         </div>
 
       <div class="field">
-        <%#= f.label :HeaderImage %><br>
-        <%#= f.file_field :postImage %>
+        <%= f.label :HeaderImage %><br>
+        <%= f.file_field :postImage %>
       </div>
 
        <%#=f.label :SelectInterest %>
