--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,2 +1,43 @@
 <% provide(:title, 'About') %>
-<h3>About Us</h3>
+<div class="row">
+  <div class="large-12 columns">
+
+    <p>We are <strong>ExploreBees</strong>, we make trips of the people to be exciting.
+        Here in ExploreBee we want to give the tourists the glimpses of unexplored places in India
+        <p> Currently we are exploring the places of Karnataka</p>
+    </p>
+
+    <p>
+      The aim of our project is to make the people to meet others who are similar to them.
+      We connect the people who are having the same interest,who work/worked in the same company,who live in your neighbourhood
+
+    </p>
+
+    <p>
+      Sometimes you may wanted to go for places for relaxing and having fun with other people(Your family,colleagues,friends).But for some reasons you couldn't make them to come with you
+      <p>So we decided to make a project where people who are interested for a trip can invite or join the trip.
+        We are having the people who can guide for the trips you make,We are having the people who give advise for best
+        cabs services in the city. And also people can give their valuable for trips they make
+
+      </p>
+    </p>
+
+    <h6>We are a team of 7 people</h6>
+    <ul>
+      <li>
+        Srinivas P V
+      </li>
+      <li>Raghu P V</li>
+      <li>Naveen R J </li>
+      <li>Abhilash J N </li>
+      <li>MuthuKumar T</li>
+      <li>Chetan Kumar</li>
+      <li>Shankar Swami</li>
+    </ul>
+
+
+
+
+
+  </div>
+</div>
