--- a/app/views/feed_backs/_form.html.erb
+++ b/app/views/feed_backs/_form.html.erb
@@ -27,6 +27,6 @@
     <%= f.text_area :content ,size:"20x20",resize:"none"%>
   </div>
   <div class="">
-    <%= f.submit class:"button radius" %>
+    <%= f.submit "Submit Feed Back", class:"button radius" %>
   </div>
 <% end %>
