--- a/app/views/places/signed_index.html.erb
+++ b/app/views/places/signed_index.html.erb
@@ -58,7 +58,7 @@
             </div>
             </ul>
 -->       <a ng-href="/places/{{place.place.id}}" target="_blank" data-tooltip class="has-tip" title="click me">
-          <img ng-src="{{place.images[0].image.url}}" alt="places photos" />
+          <img ng-src="{{place.image.image.url}}" alt="places photos" />
         </a>
           <p ng-bind-html="place.place.description">
             <wbr>
