--- a/app/views/places/_form.html.erb
+++ b/app/views/places/_form.html.erb
@@ -55,7 +55,7 @@
 
   <div class="large-4 columns">
     <div ng-controller = "PlaceEditCtrl">
-      <!--<button ng-click = "deleteAllPhotos( <%#=@place.id %>)"> Delete Photos(only for Detail Description)</button>-->
+      <button ng-click = "deleteAllPhotos( <%=@place.id %>)"> Delete Photos(only for Detail Description)</button>
        <br><br>
       <button ng-click="clean(<%=@place.id if @place %>)">Clean Photos(only for Detail Description)</button>
 
