--- a/app/views/static_pages/_unsigned.html.erb
+++ b/app/views/static_pages/_unsigned.html.erb
@@ -104,7 +104,7 @@
                       </ul>-->
                <div class="text-center">
                <%unless place.place_albums.empty? %>
-                <%= image_tag "#{@root_path}#{place.place_albums.first.image_url.to_s}" %>
+                <%= image_tag "#{@root_path}#{place.place_albums.where.not(image:"").first.image_url.to_s}" %>
                <% end %>
                </div>
              </a>
