added place description

--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -61,18 +61,18 @@
 
 
    <!--For getting details later -->
-  <button class="tiny" ng-click="getPlaceDetails()">Read More</button>
+ <!-- <button class="tiny" ng-click="getPlaceDetails()">Read More</button>
 
 
   <div ng-show="detailShow">
 
     <div ng-bind-html="detailDescription"></div>
-  </div>
+  </div>-->
   <br>
 
 
     </div>
-        <%#= raw @place.detail_description %>
+        <%= raw @place.detail_description %>
 
 
 
